syntax = "proto3";

package multisig.v1;
option go_package = "./multisigpb";

service MultisigService {
  // Read
  rpc Multisigs(MultisigsRequest) returns (MultisigsResponse);
  rpc Transactions(TransactionsRequest) returns (TransactionsResponse);
  rpc TransactionsCounts(TransactionsCountsRequest) returns (TransactionsCountsResponse);

  // Write
  rpc CreateOrJoinMultisig(CreateOrJoinMultisigRequest) returns (CreateOrJoinMultisigResponse);
  rpc LeaveMultisig(LeaveMultisigRequest) returns (LeaveMultisigResponse);
  rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse);
  rpc SignTransaction(SignTransactionRequest) returns (SignTransactionResponse);

  // Auth
  rpc GetChallenge(GetChallengeRequest) returns (GetChallengeResponse);
  rpc GetToken(GetTokenRequest) returns (GetTokenResponse);
}

message Multisig {
  uint32 created_at = 1;
  string chain_id = 2;
  string address = 4;
  bool joined = 5;
  string name = 6;
}

message Transaction {
  uint32 created_at = 1;
  string final_hash = 2;
  string multisig_address = 3;
  string chain_id = 4;
  string msgs_json = 5;
  string fee_json = 6;
  uint32 account_number = 7;
  uint32 sequence = 8;
  string creator_address = 9;
}

message Signature {
  uint32 created_at = 1;
}

message Token {
	string nonce = 1;
	uint32 created_at = 2;
	uint32 duration = 3;
}

enum JoinState {
  JOIN_STATE_UNSPECIFIED = 0;
  JOIN_STATE_IN = 1;
  JOIN_STATE_OUT = 2;
}

message MultisigsRequest {
  Token auth_token = 1;
  uint32 limit = 2;
  uint32 start_after = 3;
  string chain_id = 4;
  JoinState join_state = 5;
}

message MultisigsResponse {
  repeated Multisig multisigs = 1;
}

enum ExecutionState {
  EXECUTION_STATE_UNSPECIFIED = 0;
  EXECUTION_STATE_PENDING = 1;
  EXECUTION_STATE_EXECUTED = 2;
}

message TransactionsRequest {
  Token auth_token = 1;
  uint32 limit = 2;
  uint32 start_after = 3;
  ExecutionState execution_state = 4;
  string multisig_address = 6; // if unspecified, return transactions for all multisigs of this user
  string chain_id = 7;
}

message TransactionsResponse {
  repeated Transaction transactions = 1;
}

message CreateOrJoinMultisigRequest {
  string chain_id = 1;
  string multisig_pubkey_json = 2;
  Token auth_token = 3;
  string name = 4;
  string bech32_prefix = 5;
}

message CreateOrJoinMultisigResponse {
  bool created = 1;
  bool joined = 2;
}

message LeaveMultisigRequest {
  string multisig_address = 1;
  Token auth_token = 2;
  string chain_id = 3;
}

message LeaveMultisigResponse {
  bool left = 1;
  bool found = 2;
}

message CreateTransactionRequest {
  Token auth_token = 1;
	string multisig_address= 3;
  uint32 accountNumber = 4;
  uint32 sequence = 5;
  string msgs_json = 6;
  string fee_json = 7;
  string chain_id = 8;
}

message CreateTransactionResponse {

}

message SignTransactionRequest {
  Token auth_token = 1;
}

message SignTransactionResponse {
  
}

message GetChallengeRequest {

}

message GetChallengeResponse {
  string challenge = 1;
}

message GetTokenRequest {
  string challenge = 1;
  string challenge_signature = 2;
  string user_bech32_prefix = 4;
  string user_pubkey_json = 5;
}

message GetTokenResponse {
  Token auth_token = 1;
}

message TransactionsCountsRequest {
  Token auth_token = 1;
  string multisig_address = 2;
}

message TransactionsCountsResponse {
  uint32 total = 1;
  uint32 pending = 2;
  uint32 executed = 3;
}
